--- a/consonance/Dockerfile_client
+++ b/consonance/Dockerfile_client
@@ -25,7 +25,7 @@ RUN add-apt-repository -y ppa:webupd8team/java \
 ENV consonance_version=cgp-2.0.0-alpha.16
 
 # Switch to BD2K fork over Consonance source for reaping fix
-RUN wget --no-verbose https://github.com/BD2KGenomics/consonance/releases/download/${consonance_version}/consonance-arch-${consonance_version}.jar
+RUN wget --no-verbose https://www.dropbox.com/s/qbuz9smsye34513/consonance-arch-2.0.0-alpha.16-SNAPSHOT.jar?dl=0
 #RUN wget --no-verbose https://github.com/Consonance/consonance/releases/download/${consonance_version}/consonance-arch-${consonance_version}.jar
 # https://www.dropbox.com/s/giy9ayxlvpoohiz/consonance-arch-2.0-alpha.11-SNAPSHOT.jar #https://seqwaremaven.oicr.on.ca/artifactory/seqware-release/io/consonance/consonance-arch/${consonance_version}/consonance-arch-${consonance_version}.jar
 
@@ -58,9 +58,11 @@ RUN echo "postgres:5432:*:*:postgres" > /home/ubuntu/.pgpass && chmod 600 /home/
 
 # Note: hard-coded patch to download executable
 RUN wget --no-verbose https://github.com/Consonance/consonance/releases/download/2.0.0-alpha.15/consonance && mv consonance /home/ubuntu/bin && chmod a+x /home/ubuntu/bin/consonance
-RUN wget --no-verbose --no-check-certificate https://github.com/BD2KGenomics/consonance/releases/download/${consonance_version}/consonance-client-${consonance_version}.jar && mv consonance-client-*.jar /home/ubuntu/.consonance/self-installs/consonance-client-${consonance_version}.jar
+RUN wget --no-verbose --no-check-certificate https://www.dropbox.com/s/530a642vqhx5yjd/consonance-client-2.0.0-alpha.16-SNAPSHOT.jar?dl=0 && mv consonance-client-*.jar /home/ubuntu/.consonance/self-installs/consonance-client-${consonance_version}.jar
+
 #RUN wget --no-verbose --no-check-certificate https://www.dropbox.com/s/32hrcqgose2fpzz/consonance-client-2.0-alpha.11-SNAPSHOT.jar && mv consonance-client-*.jar /home/ubuntu/.consonance/self-installs/consonance-client-${consonance_version}.jar
 #RUN wget --no-verbose --no-check-certificate http://seqwaremaven.oicr.on.ca/artifactory/seqware-release/io/consonance/consonance-client/${consonance_version}/consonance-client-${consonance_version}.jar && mv consonance-client-${consonance_version}.jar /home/ubuntu/.consonance/self-installs/
+
 
 # now get a sample CWL and test JSON
 RUN wget --no-verbose https://raw.githubusercontent.com/CancerCollaboratory/dockstore-tool-bamstats/1.25-6_1.0/Dockstore.cwl
